--- a/wp-content/themes/imb/assets/less/layouts/_header.less
+++ b/wp-content/themes/imb/assets/less/layouts/_header.less
@@ -30,7 +30,9 @@
 }
 
  .navbar-nav {
- 	display: inline-block; margin: 0 auto;
+ 	display: inline-block; 
+  margin: 0 auto;
+  //float: none;
  }
 
  .navbar-default .navbar-collapse {
@@ -71,8 +73,8 @@
 
 
  		@media only screen and (min-width:768px) {
- 			width: 12.5%;
-      max-width: calc(100% / 8);
+ 			width: 14.285714286%;
+      max-width: calc(100% / 7);
  			margin-bottom: 0;
 
  			   	&:nth-child(odd) {
@@ -86,11 +88,9 @@
  .navbar-default .navbar-nav li a, .navbar-default .navbar-nav > .open > a {
  	color: @navbar-default-link-color; 
  	display: block;
- 	// height: 100%;
- 	// width: 100%;
  	font-weight: 500;
   font-size: .9em;
-  padding: 14px 0;
+  padding: 1em;
  	background: @navbar-default-link-bg url(0);
 
  		&:hover { 
@@ -100,7 +100,6 @@
  		@media only screen and (min-width:768px) {
 
  			background: @navbar-default-link-bg url("/imb/wp-content/themes/imb/assets/img/nav-divider.gif") no-repeat 100% 50%;
-
 
  		}
 
@@ -114,6 +113,10 @@
  		&:hover {
  			background: @navbar-default-link-hover-bg;
  		}
+ }
+
+ .navbar-default .navbar-nav li:last-child a {
+      background: @brand-primary;
  }
 
 .navbar-default .navbar-nav li.active:last-child a {
